2023-01-12
* Fixed bug in bb_get_list when data came from a pipe and the "-f" option was present.

2023-01-12
* get_nr_list and get_freq_from_list now merged into a sigle script: bb_get_list (-f option to get frequencies).

2022-12-02
* bb_get_nr_list added to the set of scripts.
* A new mets.lst file added to the set of testdata.
* Improved feedback::help function. Now accepts two string variables.


2022-11-28
* Shebang changed to /usr/bin/env bash in all scripts.
* New feedback::help function added to feedback lib.
* Created structure to work with  bb_get_nr_list

2022-11-19
* Emboss added to the list of dependencies check.
* BB main scripts now moved to a directory called "source".
* in "installbiobash" script, BB main scripts are now copied from "source" directory.

2022-11-3
* Solved bug in setup_environment that hardcoded the full $PATH in .bashrc file. This prevented any actualization of PATH variable to take effect, because it was already hardcoded by Biobash installer. Now the variable "$PATH" is writen in the .bashrc file not the hardcoded path (line 208).
* Fixed bug in bb_get_fasta_headers line 116 with expected unary operator when running script with "-i".

2022-11-3
* Uninstaller now cleans up bashrc file ufter unistallation.
* Other minor aesthetic updates  implemented in install/Uninstall.

2022-11-2
* Uninstallation now erases BB paths from PATH. echo $PATH is now uncluttered.
* BB installer now hadds a BEGIN and END section to .bashrc. This will be useful for erasing the whole content in uninstallation script.

2022-10-31
* io.sh functions now return 0 (TRUE) and 1 (FALSE). This is done to keep consistency across most functions in library.
* An stable version of input check has been reached and implemented in bb_get_fasta_headers.
* A new version of BB  with this changes released today.

2022-10-28
* io.sh is updated. input_is_empty was moved to "script_has_args". 